Modification de l'accueil, ajout d'un slider + ajout de la page confirmationCommande

--- a/index.html
+++ b/index.html
@@ -99,17 +99,25 @@
 		</div>
 		<br>
 		<section id="promotion">
-			<h2>Bons plans de la semaine</h2>
-				<h3>Pour Noël, découvrez notre sélection de tire-bouchons en bois à -2% !</h3>
-					<img src="assets/images/tireBouchonBois.jpg" alt="Selection de tires bouchons en bois">
-				<h3>Cette semaine uniquement, faites plaisir à vos proches en leur offrant le tout nouveau décapsuleur porte-clef</h3> 
-					<img src="assets/images/decapsuleurPorteCle.jpg" alt="Decapsuleur porte clé">
+			<h2>Les bons plans !</h2>
+			<div id="slideshow">
+				<ul id="sContent">
+					<li><a href="recherche.html"><img src="assets/images/promo1.png" alt="Selection à -2%"/></a></li>
+					<li><a href="recherche.html"><img src="assets/images/promo2.png" alt="Décapsuleur porte-clef à 73,5€"/></a></li>
+					<li><a href="article.html"><img src="assets/images/promo3.png" alt="Tire bouchon en forme de cerf à 10,29€"/></a></li>
+				</ul>
+			</div>
+		</section>
+		<section id="pereNoel">
+			<h1>Et si cette année, le père Noël c'était vous ?</h1>
+			<h2>Vous souhaitez acheter pour offrir ? Nous emballons le cadeau avant expédition !</h2>
+			<img src="assets/images/pereNoel.jpg" alt="PEre Noel avec des tires-bouchon">
 		</section>
 		<footer>
 			<table id="bas">
 				<tr>
 					<td><a href="construction.html" class="link">Tous nos produits</a></td>
-					<td><a href="construction.html" class="link">Qui sommes nous?</a></td>
+					<td><a href="quisommesnous.html" class="link">Qui sommes nous?</a></td>
 					<td><a href="construction.html" class="link">Moyens de paiements</a></td>
 				</tr><tr>
 					<td><a href="construction.html" class="link">Nos offres et promotions</a></td>
