--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -98,14 +98,16 @@
 			</table>
 		</div>
 		<section id="qsn">
-			<h1> Qui sommes-nous</h1>
-			<p></p>
-		
+			<h1> Qui sommes-nous ?</h1>
+			<p>Le mauvais centre est un site de vente en ligne spécialiste en tires-bouchon et décapsuleurs. Nous vous proposons des produits high-tech pas chers avec un tas de nouveautés chaque jour ! </p>
+			<p>Depuis plus d'un siècle et demi, toute l'équipe organisée de vendeurs en ligne composée de Gérard et Thierry, vous conseils chaque jour dans vos achats.</p>
+			<p>Conçu et géré par Jérémy Thomas et Auriane Delahaie.</p>
+		</section>
 		<footer>
 			<table id="bas">
 				<tr>
 					<td><a href="construction.html" class="link">Tous nos produits</a></td>
-					<td><a href="construction.html" class="link">Qui sommes nous?</a></td>
+					<td><a href="quisommesnous.html" class="link">Qui sommes nous?</a></td>
 					<td><a href="construction.html" class="link">Moyens de paiements</a></td>
 				</tr><tr>
 					<td><a href="construction.html" class="link">Nos offres et promotions</a></td>
