--- a/validationcommande.html
+++ b/validationcommande.html
@@ -133,7 +133,7 @@
 				<label>Livraison à domicile sous 1 semaine<input type="radio"></label>
 			</div>	
 			<div id="confirmer">
-				<form action="construction.html">
+				<form action="confirmationCommande.html">
 					<button class="continue">Confirmer...</button>
 				</form>	
 				<a href="panier.html" class="link">Cliquez ici pour revenir au panier...</a>
@@ -143,7 +143,7 @@
 			<table id="bas">
 				<tr>
 					<td><a href="construction.html" class="link">Tous nos produits</a></td>
-					<td><a href="construction.html" class="link">Qui sommes nous?</a></td>
+					<td><a href="quisommesnous.html" class="link">Qui sommes nous?</a></td>
 					<td><a href="construction.html" class="link">Moyens de paiements</a></td>
 				</tr><tr>
 					<td><a href="construction.html" class="link">Nos offres et promotions</a></td>
