--- a/recherche.html
+++ b/recherche.html
@@ -154,7 +154,7 @@
 			<table id="bas">
 				<tr>
 					<td><a href="construction.html" class="link">Tous nos produits</a></td>
-					<td><a href="construction.html" class="link">Qui sommes nous?</a></td>
+					<td><a href="quisommesnous.html" class="link">Qui sommes nous?</a></td>
 					<td><a href="construction.html" class="link">Moyens de paiements</a></td>
 				</tr><tr>
 					<td><a href="construction.html" class="link">Nos offres et promotions</a></td>
