Page 'qui sommes nous' finie + bug bouton radio validation commande réparé

--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -99,8 +99,10 @@
 		</div>
 		<section id="qsn">
 			<h1> Qui sommes-nous ?</h1>
-			<p>Le mauvais centre est un site de vente en ligne spécialiste en tires-bouchon et décapsuleurs. Nous vous proposons des produits high-tech pas chers avec un tas de nouveautés chaque jour ! </p>
-			<p>Depuis plus d'un siècle et demi, toute l'équipe organisée de vendeurs en ligne composée de Gérard et Thierry, vous conseils chaque jour dans vos achats.</p>
+			<p>Le mauvais centre est un site de vente en ligne spécialisé dans le tire-bouchon et le décapsuleur. Nous vous proposons des produits high-tech pas chers avec un tas de nouveautés chaque jour ! </p>
+			<p>Depuis plus d'un siècle et demi, toute l'équipe de vendeurs en ligne composée de Gérard et Thierry, vous conseille chaque jour dans vos achats sans jamais pousser le <em title="Jeu de mot non consenti par la direction">bouchon</em> trop loin ni vous forcer la main.</p>
+			<p>Composée de passionnés de l'apéro, l'équipe est là pour vous concocter une offre riche et variée et vous sélectionner les meilleurs produits au meilleur prix. Chaque conseiller saura vous orienter dans votre choix ; il saura dénicher pour vous les meilleures offres et vous expédier votre marchandise en un temps record même en cas d'<em title="Jeu de mot non consenti par la direction">embouteillage</em>.</p>
+			<br><br>
 			<p>Conçu et géré par Jérémy Thomas et Auriane Delahaie.</p>
 		</section>
 		<footer>
