--- a/validationcommande.html
+++ b/validationcommande.html
@@ -126,11 +126,11 @@
 			</div>
 			<div id="choixLiv">
 				<h2>Mode de livraison :</h2>
-				<label>Livraison en point relais en point relais<input type="radio"></label>
+				<label><input type="radio" name="liv"> Livraison en point relais</label>
 				<br>
-				<label>Livraison à domicile sous 24h (surcoût)<input type="radio"></label>
+				<label><input type="radio" name="liv"> Livraison à domicile sous 24h (surcoût)</label>
 				<br>
-				<label>Livraison à domicile sous 1 semaine<input type="radio"></label>
+				<label><input type="radio" name="liv"> Livraison à domicile sous 1 semaine</label>
 			</div>	
 			<div id="confirmer">
 				<form action="confirmationCommande.html">
