ajout note quisommesnous + passage au validateur du w3c

--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="assets/style.css">
@@ -103,7 +103,10 @@
 			<p>Depuis plus d'un siècle et demi, toute l'équipe de vendeurs en ligne composée de Gérard et Thierry, vous conseille chaque jour dans vos achats sans jamais pousser le <em title="Jeu de mot non consenti par la direction">bouchon</em> trop loin ni vous forcer la main.</p>
 			<p>Composée de passionnés de l'apéro, l'équipe est là pour vous concocter une offre riche et variée et vous sélectionner les meilleurs produits au meilleur prix. Chaque conseiller saura vous orienter dans votre choix ; il saura dénicher pour vous les meilleures offres et vous expédier votre marchandise en un temps record même en cas d'<em title="Jeu de mot non consenti par la direction">embouteillage</em>.</p>
 			<br><br>
-			<p>Conçu et géré par Jérémy Thomas et Auriane Delahaie.</p>
+			<h2>Notes sur le site (à l'attention des enseignants) :</h2>
+			<p>Nous avons fait en sorte de structurer le site à l'aide de divers outils (tableaux, flexbox, sections, marges...) qui adaptent leur taille en fonction de celle de l'écran. Cela nous a permis de rendre le site responsive (sur smartphone par exemple, chaque items se repositionne de sorte à ce qu'aucun ne sorte de l'écran ou se superposent) sans l'utilisation de la directive @media.</p>
+			<br><br>
+			<p>Conçu et géré par Jérémy Thomas et Auriane Delahaie, du groupe G5S1.</p>
 		</section>
 		<footer>
 			<table id="bas">
